<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:id="@+id/categoryTitle"
            style="@style/NewJokeTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_joke_screen_category_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/categoryTitle"
            app:layout_constraintTop_toBottomOf="@id/categoryTitle" />

        <TextView
            android:id="@+id/isSafeTitle"
            style="@style/NewJokeTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_joke_screen_is_safe_title"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/isSafeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintStart_toStartOf="@id/isSafeTitle"
            app:layout_constraintTop_toBottomOf="@id/isSafeTitle" />

        <TextView
            android:id="@+id/jokeTitle"
            style="@style/NewJokeTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_joke_screen_joke_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/isSafeSwitch" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/jokeInput"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:lines="5"
            android:maxLines="8"
            app:layout_constraintTop_toBottomOf="@id/jokeTitle" />

        <TextView
            android:id="@+id/flagsTitle"
            style="@style/NewJokeTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_joke_screen_flags_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jokeInput" />

        <LinearLayout
            android:id="@+id/flagsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flagsTitle">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/nsfwCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_joke_screen_nsfw_flag" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/religiousCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_joke_screen_religious_flag" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/politicalCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_joke_screen_political_flag" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/racistCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_joke_screen_racist_flag" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/sexistCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_joke_screen_sexist_flag" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/explicitCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_joke_screen_explicit_flag" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:text="@string/new_joke_screen_submit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flagsContainer" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>